16_subseq/grade.txt
Grading at Fri Mar  6 07:47:52 UTC 2020
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:3:23: error: return makes integer from pointer without a cast [-Werror=int-conversion]
   if (n == 0) {return NULL;}
                       ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
